# pynico

./: .gitignore  CHANGES.md  README.md  pyproject.toml
pynico_eros_montin/: palette.py  pynico.py  stats.py
src/: pynico.py
tests/: test_Pathable.py  test_trash.py
