[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pynico_eros_montin"
version = "0.0.3"
authors = [
  { name="Dr. Eros Montin, PhD", email="eros.montin@gmail.com" },
]
description = "Handy things you need, at least me"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/erosmontin/pynico"
"Bug Tracker" = "https://github.com/erosmontin/pynico/issues"
